# Colmap-Plane

./: README.md
Config/: optim_ezxr_config.json
colmap/src/: CMakeLists.txt
colmap/src/base/: cost_functions.h
colmap/src/controllers/: bundle_adjustment.cc  bundle_adjustment.h
colmap/src/exe_ezxr/: CMakeLists.txt  optim_ezxr.cc
colmap/src/optim/: bundle_adjustment.cc  bundle_adjustment.h
plane_ransac/: CMakeLists.txt
plane_ransac/src/: plane_ransac.cpp
scripts/python/: align_model_with_traj.py  analysis_ransac_plane.py  downsample_images_from_tum.py  downsample_images_from_tum_sync.py  get_3Dplane_from_points.py  get_points_from_lidar2D.py  io_tools.py  lie_algebra.py  model_get_plane_points.py  pcd2ply.py  ransac_plane.py  read_write_model.py
